# sound-changer

./: CHANGELOG.md  Cargo.toml  DEVELOPERS.md  README.md  Step-by-Step Guide for AI Agent_ Implementing Taur.md  index.html  styles.css
.github/: copilot-instructions.md
public/: drag-drop.js
sound-changer/src-tauri/src/: audio_manager.rs  error.rs  lib.rs  main.rs
sound-changer/src-tauri/src/tests/: audio_manager_tests.rs  integration_tests.rs  mod.rs
sound-changer/tests/integration/: tauri_app_tests.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_manager.rs  error.rs  lib.rs  main.rs
